--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         volumes:
             - .:/myapp
         ports:
-            - "3000:3000"
+            - 3000:3000
         depends_on:
             - db
 #    api:
@@ -23,16 +23,16 @@ services:
 #            - /api/node_modules
 #        networks:
 #            - app-network
-#    nginx:
-#        image: nginx:latest
-#        volumes:
-#            - ./nginx:/etc/nginx/conf.d
-#        ports:
-#            - 80:80
-#        depends_on:
-#            - api
-#        networks:
-#            - app-network
+    nginx:
+        image: nginx:latest
+        volumes:
+            # - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        ports:
+            - 80:80
+            - 443:443
+        networks:
+            - app-network
 
 networks:
     app-network:
