--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,14 @@
 server {
-    listen 80 default_server;
+  listen 80;
+  server_name www.compumundohypermegared.ml;
 
-    location / {
-        proxy_pass http://api:3000;
-    }
+  location /healthcheck {
+    access_log off;
+    return 200;
+    add_header Content-Type text/plain;
+  }
+
+  location / {
+    proxy_pass http://0.0.0.0:3000;
+  }
 }
