--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             POSTGRES_PASSWORD: password
     web:
         build: .
-        command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 80 -b '0.0.0.0'"
+        command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
         volumes:
             - .:/myapp
         ports:
@@ -26,14 +26,14 @@ services:
     nginx:
         image: nginx:latest
         volumes:
-            # - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            #- ./nginx/nginx.conf:/etc/nginx/nginx.conf
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         ports:
             - 80:80
             - 443:443
-        networks:
-            - app-network
+        #networks:
+        #    - app-network
 
-networks:
-    app-network:
-        driver: bridge
+#networks:
+#    app-network:
+#        driver: bridge
