--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,22 @@
+upstream web {
+	server ec2-177-71-156-74.sa-east-1.compute.amazonaws.com:3000;
+}
+
 server {
-  listen 80;
-  server_name www.compumundohypermegared.ml;
+	listen 80;
+	# server_name www.compumundohypermegared.ml;
 
-  location /healthcheck {
-    access_log off;
-    return 200;
-    add_header Content-Type text/plain;
-  }
+	location /healthcheck {
+		access_log off;
+		return 200;
+		add_header Content-Type text/plain;
+	}
 
-  location / {
-    proxy_pass http://0.0.0.0:3000;
-  }
+	location / {
+		proxy_set_header   X-Real-IP            $remote_addr;
+		proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Proto    $scheme;
+		proxy_set_header Host $http_host;
+		proxy_pass http://web;
+	}
 }
