--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,25 +15,23 @@ services:
             - 3000:3000
         depends_on:
             - db
-#    api:
-#        build: ./api
-#        command: npm start
-#        volumes:
-#            - ./api:/api
-#            - /api/node_modules
-#        networks:
-#            - app-network
     nginx:
         image: nginx:latest
         volumes:
-            #- ./nginx/nginx.conf:/etc/nginx/nginx.conf
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
         ports:
             - 80:80
             - 443:443
-        #networks:
-        #    - app-network
+        networks:
+            - app-network
+        command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    certbot:
+        image: certbot/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
-#networks:
-#    app-network:
-#        driver: bridge
+networks:
+    app-network:
+        driver: bridge
+
