--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,11 @@ upstream web {
 
 server {
 	listen 80;
-	# server_name www.compumundohypermegared.ml;
+	server_name compumundohypermegared.ml;
+
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
 
 	location /healthcheck {
 		access_log off;
@@ -13,10 +17,26 @@ server {
 	}
 
 	location / {
-		proxy_set_header   X-Real-IP            $remote_addr;
-		proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-		proxy_set_header   X-Forwarded-Proto    $scheme;
-		proxy_set_header Host $http_host;
+		# proxy_set_header   X-Real-IP            $remote_addr;
+		# proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+		# proxy_set_header   X-Forwarded-Proto    $scheme;
+		# proxy_set_header Host $http_host;
+		# proxy_pass http://web;
+		return 301 https://$host$request_uri;
+	}
+}
+
+server {
+	listen 443 ssl;
+	server_name compumundohypermegared.ml;
+
+	ssl_certificate /etc/letsencrypt/live/compumundohypermegared.ml/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/compumundohypermegared.ml/privkey.pem;
+	include /etc/letsencrypt/options-ssl-nginx.conf;
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+	location / {
 		proxy_pass http://web;
 	}
 }
+
